fixed scrollbar issues

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -49,7 +49,6 @@ input[type=text] {
   max-height: 620px;
   justify-content: start;
   display: block;
-  overflow: scroll;
 }
 
 .table-height {
